refactor: adjust HTML-formatting according to rule 3.1 in html-and-css.md(rename only id what not break down scripts)

--- a/style.css
+++ b/style.css
@@ -5,28 +5,28 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.eisenhower-matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.eisenhower-matrix img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.eisenhower-matrix .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .eisenhower-matrix { 
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.item-menu {
   display: block;
   width: 500px;
   margin: 0 auto 0;
